--- a/templates/base.html
+++ b/templates/base.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang = 'en'>
-<head>
-    <meta charset = 'UTF-8'>
+    {%  include 'head.html' %}
+<body>
 
-    <body>
-    <p>hello world!!!!!!!!!!!</p>
+    {%  include 'header.html' %}
+
+    {% block content %}
+    {% endblock %}
+
+    {%  include 'footer.html' %}
+
 </body>
-</head>
 
 </html>
