07/05 6ban class commit 2. use include, extends

--- a/templates/header.html
+++ b/templates/header.html
@@ -1,3 +1,11 @@
-    <div style="height: 10rem; background-color: aqua; margin: 2rem; border-radius: 1rem;">
-
+<div style="text-align: center">
+    <div>
+        <h1>Whalebro</h1>
     </div>
+    <div>
+        <span>nav1</span>
+        <span>nav1</span>
+        <span>nav1</span>
+        <span>nav1</span>
+    </div>
+</div>
