07/06 6ban class commit 1. visual enhancement

--- a/templates/header.html
+++ b/templates/header.html
@@ -1,8 +1,8 @@
 <div style="text-align: center">
-    <div>
-        <h1>Whalebro</h1>
+    <div style="margin:2rem 0; font-family: 'Shadows Into Light', cursive;">
+        <h1>WhaleBro</h1>
     </div>
-    <div>
+    <div style="margin-bottom: 2rem">
         <span>nav1</span>
         <span>nav1</span>
         <span>nav1</span>
