--- a/templates/header.html
+++ b/templates/header.html
@@ -1,8 +1,8 @@
 <div style="text-align: center">
-    <div style="margin:2rem 0; font-family: 'Shadows Into Light', cursive;">
+    <div class="shadow_header_logo">
         <h1>WhaleBro</h1>
     </div>
-    <div style="margin-bottom: 2rem">
+    <div class="pragmatic_header_button">
         <span>nav1</span>
         <span>nav1</span>
         <span>nav1</span>
