--- a/accountapp/templates/accountapp/hello_world.html
+++ b/accountapp/templates/accountapp/hello_world.html
@@ -1,7 +1,28 @@
 {% extends 'base.html' %}
 
 {% block content %}
+
+    <style>
+    .testing{
+        background-color: yellow;
+        margin: 1rem;
+        height: 48px;
+        width: 48px;
+        border-radius: .5rem;
+    }
+    </style>
+
+
     <div style="height: 20rem; background-color: aqua; margin: 2rem; border-radius: 1rem;">
     <h1>무야호</h1>
+
+    <div class="testing" style="display: block">block</div>
+    <div class ="testing" style="display: inline">block</div>
+    <div class ="testing" style="display: inline-block">block</div>
+    <div class ="testing" style="display: none">block</div>
+    <div class ="testing" >block</div>
+
     </div>
+
+
 {% endblock %}
