--- a/accountapp/templates/accountapp/hello_world.html
+++ b/accountapp/templates/accountapp/hello_world.html
@@ -9,18 +9,19 @@
         height: 48px;
         width: 48px;
         border-radius: .5rem;
+        display: inline-block;
     }
     </style>
 
 
-    <div style="height: 20rem; background-color: aqua; margin: 2rem; border-radius: 1rem;">
+    <div style="height: 20rem; background-color: aqua;
+    margin: 2rem; border-radius: 1rem; font-size: 2rem;">
     <h1>무야호</h1>
 
-    <div class="testing" style="display: block">block</div>
-    <div class ="testing" style="display: inline">block</div>
-    <div class ="testing" style="display: inline-block">block</div>
-    <div class ="testing" style="display: none">block</div>
-    <div class ="testing" >block</div>
+    <div class ="testing" style="height: 48px; width: 48px">pixel</div>
+    <div class ="testing" style="height: 3rem; width: 3rem">rem</div>
+    <div class ="testing" style="height: 3em; width: 3em">em</div>
+    <div class ="testing" style="height: 3l%; width: 30%">퍼센트</div>
 
     </div>
 
