07/08 6ban class commit 2. migrations

--- a/accountapp/templates/accountapp/hello_world.html
+++ b/accountapp/templates/accountapp/hello_world.html
@@ -15,7 +15,7 @@
 
 
     <div style="height: 20rem; background-color: aqua;
-    margin: 2rem; border-radius: 1rem; font-size: 2rem;">
+    margin: 2rem; border-radius: 1rem; overflow: scroll;">
     <h1>무야호</h1>
 
     <div class ="testing" style="height: 48px; width: 48px">pixel</div>
