--- a/accountapp/templates/accountapp/hello_world.html
+++ b/accountapp/templates/accountapp/hello_world.html
@@ -2,27 +2,18 @@
 
 {% block content %}
 
-    <style>
-    .testing{
-        background-color: yellow;
-        margin: 1rem;
-        height: 48px;
-        width: 48px;
-        border-radius: .5rem;
-        display: inline-block;
-    }
-    </style>
 
 
-    <div style="height: 20rem; background-color: aqua;
-    margin: 2rem; border-radius: 1rem; overflow: scroll;">
-    <h1>무야호</h1>
+    <div style="margin:2rem; text-align: center">
+        <h1>METHOD</h1>
 
-    <div class ="testing" style="height: 48px; width: 48px">pixel</div>
-    <div class ="testing" style="height: 3rem; width: 3rem">rem</div>
-    <div class ="testing" style="height: 3em; width: 3em">em</div>
-    <div class ="testing" style="height: 3l%; width: 30%">퍼센트</div>
+        <form action="/accounts/hello_world/" method ='post'>
+            {% csrf_token %}
+            <input type="submit" class="btn btn-secondary px-4 rounded-pill">
 
+        </form>
+
+        <h3>{{ text }}</h3>
     </div>
 
 
