--- a/accountapp/templates/accountapp/hello_world.html
+++ b/accountapp/templates/accountapp/hello_world.html
@@ -9,6 +9,7 @@
 
         <form action="/accounts/hello_world/" method ='post'>
             {% csrf_token %}
+            <input type="text" name="input_text">
             <input type="submit" class="btn btn-secondary px-4 rounded-pill">
 
         </form>
