--- a/accountapp/templates/accountapp/hello_world.html
+++ b/accountapp/templates/accountapp/hello_world.html
@@ -13,8 +13,9 @@
             <input type="submit" class="btn btn-secondary px-4 rounded-pill">
 
         </form>
-
-        <h3>{{ new_hello_world.text }}</h3>
+        {% for hello_world in hello_world_list %}
+            <h3>{{ hello_world.text }}</h3>
+        {% endfor %}
     </div>
 
 
