--- a/templates/header.html
+++ b/templates/header.html
@@ -5,7 +5,17 @@
     <div class="pragmatic_header_button">
         <span>nav1</span>
         <span>nav1</span>
-        <span>nav1</span>
-        <span>nav1</span>
+        {% if not user.is_authenticated %}
+        <span>
+            <a href="{% url 'accountapp:login' %}">Login</a>
+        </span>
+        <span>
+            <a href="{% url 'accountapp:create' %}">Sign Up</a>
+        </span>
+        {% else %}
+        <span>
+            <a href="{% url 'accountapp:logout' %}">Logout</a>
+        </span>
+        {% endif %}
     </div>
 </div>
