--- a/accountapp/templates/accountapp/login.html
+++ b/accountapp/templates/accountapp/login.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
+{% load bootstrap4 %}
 
 {% block content %}
-    <div class="text-center">
+    <div class="text-center mw-500 m-auto">
         <div class="m-5">
             <h4>Log In</h4>
         </div>
@@ -9,7 +10,7 @@
         <div>
             <form action="{% url 'accountapp:login' %}" method="post">
                 {% csrf_token %}
-                {{ form }}
+                {% bootstrap_form form %}
 
                 <div class="m-5">
                     <input type="submit"
