--- a/templates/header.html
+++ b/templates/header.html
@@ -5,6 +5,7 @@
     <div class="pragmatic_header_button">
         <span>nav1</span>
         <span>nav1</span>
+
         {% if not user.is_authenticated %}
         <span>
             <a href="{% url 'accountapp:login' %}">Login</a>
@@ -14,8 +15,13 @@
         </span>
         {% else %}
         <span>
+        <a href="{% url 'accountapp:detail' pk=user.pk %}">Mypage</a>
+        </span>
+        <span>
             <a href="{% url 'accountapp:logout' %}">Logout</a>
         </span>
+
         {% endif %}
+
     </div>
 </div>
