--- a/accountapp/templates/accountapp/detail.html
+++ b/accountapp/templates/accountapp/detail.html
@@ -13,6 +13,12 @@
             {{ target_user.date_joined }}
 
         </div>
+    <div>
+        <a href="{% url 'accountapp:update' pk=target_user.pk %}">
+            Update Info
+        </a>
+    </div>
+
 
     </div>
 
