--- a/accountapp/templates/accountapp/detail.html
+++ b/accountapp/templates/accountapp/detail.html
@@ -13,17 +13,19 @@
             {{ target_user.date_joined }}
 
         </div>
-    <div>
-        <a href="{% url 'accountapp:update' pk=target_user.pk %}">
-            Update Info
-        </a>
-    </div>
-    <div>
-        <a href="{% url 'accountapp:delete' pk=target_user.pk %}">
-            Quit
-        </a>
-    </div>
 
+        {% if user == target_user %}
+        <div>
+            <a href="{% url 'accountapp:update' pk=target_user.pk %}">
+                Update Info
+            </a>
+        </div>
+        <div>
+            <a href="{% url 'accountapp:delete' pk=target_user.pk %}">
+                Quit
+            </a>
+        </div>
+        {% endif %}
 
     </div>
 
