--- a/accountapp/templates/accountapp/detail.html
+++ b/accountapp/templates/accountapp/detail.html
@@ -9,13 +9,14 @@
         <div class="m-5 ">
             {% if target_user.profile %}
                 <img src="{{ target_user.profile.image.url }}"
-                    alt="profile image">
-                <h4>{{ target_user.profile.nickname }}</h4>
+                     class="profile_image m-4"
+                     alt="profile image">
+                <h2 class="NNS_B">{{ target_user.profile.nickname }}</h2>
                 <h5>{{ target_user.profile.message }}</h5>
             {% else %}
-                <h4><a href="{% url 'profileapp:create' %}">
+                <h2><a href="{% url 'profileapp:create' %}">
                         Create Profile
-                    </a></h4>
+                    </a></h2>
             {% endif %}
         </div>
 
