--- a/profileapp/templates/profileapp/update.html
+++ b/profileapp/templates/profileapp/update.html
@@ -4,7 +4,7 @@
 {% block content %}
     <div class="text-center mw-500 m-auto">
         <div class="m-5">
-            <h4>Update profile</h4>
+            <h4>Update Profile</h4>
         </div>
         <div>
             <form action="{% url 'profileapp:update' pk=target_profile.pk %}"
