--- a/articleapp/templates/articleapp/detail.html
+++ b/articleapp/templates/articleapp/detail.html
@@ -14,6 +14,12 @@
             {# 게시글 대표 이미지, 콘텐츠. #}
             <img src="{{ target_article.image.url }}">
             {{ target_article.content }}
+            <div>
+                <a href="{% url 'articleapp:update' pk=target_article.pk %}"
+                class="btn btn-success rounded-pill px-5">
+                    Update
+                </a>
+            </div>
         </div>
     </div>
 
