--- a/articleapp/templates/articleapp/detail.html
+++ b/articleapp/templates/articleapp/detail.html
@@ -16,8 +16,12 @@
             {{ target_article.content }}
             <div>
                 <a href="{% url 'articleapp:update' pk=target_article.pk %}"
-                class="btn btn-success rounded-pill px-5">
+                class="btn btn-success rounded-pill px5">
                     Update
+                </a>
+                <a href="{% url 'articleapp:delete' pk=target_article.pk %}"
+                class="btn btn-danger rounded-pill px5">
+                    Delete
                 </a>
             </div>
         </div>
