--- a/articleapp/templates/articleapp/detail.html
+++ b/articleapp/templates/articleapp/detail.html
@@ -3,27 +3,41 @@
 
 {% block content %}
 
-    <div class="container">
-        <div>
+    <div class="container text-center">
+        <div class="my-5">
             {# 제목, 글쓴이, 작성일자. #}
-            <h1>{{ target_article.title }}</h1>
+            <h1 class="NNS_B">{{ target_article.title }}</h1>
             <h3>{{ target_article.writer.profile.nickname }}</h3>
             <p>{{ target_article.created_at }}</p>
         </div>
-        <div>
+
+        <hr>
+
+        <div class="my-5">
             {# 게시글 대표 이미지, 콘텐츠. #}
-            <img src="{{ target_article.image.url }}">
+            <img src="{{ target_article.image.url }}"
+            class="article_image">
+
+            <div class="article_content my-5">
             {{ target_article.content }}
-            <div>
-                <a href="{% url 'articleapp:update' pk=target_article.pk %}"
-                class="btn btn-success rounded-pill px5">
-                    Update
-                </a>
-                <a href="{% url 'articleapp:delete' pk=target_article.pk %}"
-                class="btn btn-danger rounded-pill px5">
-                    Delete
-                </a>
             </div>
+
+            {% if target_article.writer == user  %}
+            <div>
+            <a href="{% url 'articleapp:update' pk=target_article.pk %}"
+            class="btn btn-success rounded-pill px5">
+                Update
+            </a>
+            <a href="{% url 'articleapp:delete' pk=target_article.pk %}"
+            class="btn btn-danger rounded-pill px5">
+                Delete
+            </a>
+            </div>
+            {% endif %}
+        </div>
+        <hr>
+        <div>
+            {#  댓글내용, 댓글 작성 #}
         </div>
     </div>
 
