08/05 6ban class commit 4. Article list

--- a/articleapp/templates/articleapp/list.html
+++ b/articleapp/templates/articleapp/list.html
@@ -36,4 +36,34 @@
 
     <script src="{% static 'js/magicgrid.js' %}"></script>
 
+    <div class="text-center">
+        {% if page_obj.has_previous %}
+            <a href="?page={{ page_obj.previous_page_number }}"
+            class="btn btn-secondary rounded-pill">
+            {{ page_obj.previous_page_number }}
+            </a>
+        {% endif %}
+            <a href="#"
+            class="btn btn-dark rounded-pill">
+                {{ page_obj.number }}
+            </a>
+        {% if page_obj.has_next %}
+            <a href="?page={{ page_obj.next_page_number }}"
+            class="btn btn-secondary rounded-pill">
+            {{ page_obj.next_page_number }}
+            </a>
+        {% endif %}
+    </div>
+
+    <div class="text-center my-5">
+        <a href="{% url 'articleapp:create' %}"
+        class="btn btn-dark rounded-pill material-icons">
+            brush
+        </a>
+        <a href="{% url 'articleapp:create' %}"
+        class="btn btn-outline-dark rounded-pill px-5">
+            Create Article
+        </a>
+    </div>
+
 {% endblock %}
