08/05 6ban class commit 5. Article list

--- a/articleapp/templates/articleapp/list.html
+++ b/articleapp/templates/articleapp/list.html
@@ -36,24 +36,7 @@
 
     <script src="{% static 'js/magicgrid.js' %}"></script>
 
-    <div class="text-center">
-        {% if page_obj.has_previous %}
-            <a href="?page={{ page_obj.previous_page_number }}"
-            class="btn btn-secondary rounded-pill">
-            {{ page_obj.previous_page_number }}
-            </a>
-        {% endif %}
-            <a href="#"
-            class="btn btn-dark rounded-pill">
-                {{ page_obj.number }}
-            </a>
-        {% if page_obj.has_next %}
-            <a href="?page={{ page_obj.next_page_number }}"
-            class="btn btn-secondary rounded-pill">
-            {{ page_obj.next_page_number }}
-            </a>
-        {% endif %}
-    </div>
+    {% include 'snippets/pagination.html' %}
 
     <div class="text-center my-5">
         <a href="{% url 'articleapp:create' %}"
