08/09 6ban class commit 4. commentapp

--- a/articleapp/templates/articleapp/detail.html
+++ b/articleapp/templates/articleapp/detail.html
@@ -36,8 +36,9 @@
             {% endif %}
         </div>
         <hr>
-        <div>
+        <div class="text-center my-4">
             {#  댓글내용, 댓글 작성 #}
+            {% include 'commentapp/create.html' %}
         </div>
     </div>
 
