--- a/commentapp/templates/commentapp/create.html
+++ b/commentapp/templates/commentapp/create.html
@@ -1,7 +1,4 @@
-{% extends 'base.html' %}
 {% load bootstrap4 %}
-
-{% block content %}
     <div class="text-center mw-500 m-auto">
         <div class="m-5">
             <h4>Create Comment</h4>
@@ -10,6 +7,9 @@
             <form action="{% url 'commentapp:create' %}" method="post">
                 {% csrf_token %}
                 {% bootstrap_form form %}
+                <input type="hidden"
+                       name="article_pk"
+                       value="{{ target_article.pk }}">
 
                 <div class="m-5">
                     <input type="submit"
@@ -20,4 +20,3 @@
         </div>
 
     </div>
-{% endblock %}
