08/10 6ban class commit 1. commentapp

--- a/static/base.css
+++ b/static/base.css
@@ -53,3 +53,10 @@
     text-align: left;
     font-size: 1.1rem;
 }
+
+.comment_box {
+    border: solid darkgrey;
+    padding: 1rem;
+    border-radius: 1rem;
+    margin: 1rem;
+}
