--- a/articleapp/templates/articleapp/detail.html
+++ b/articleapp/templates/articleapp/detail.html
@@ -38,6 +38,22 @@
         <hr>
         <div class="text-center my-4">
             {#  댓글내용, 댓글 작성 #}
+
+            {% for comment in target_article.comment.all %}
+                <div class="comment_box">
+                <div>
+                    <div>
+                    <span style="font-size:1.4rem;
+                                margin-right: 1.1rem"
+                          class="NNS_B">
+                        {{ comment.writer.profile.nickname }}
+                    </span>
+                    <span>{{ comment.created_at }}</span>
+                    </div>
+                    <p>{{ comment.content }}</p>
+                </div>
+                </div>
+            {% endfor %}
             {% include 'commentapp/create.html' %}
         </div>
     </div>
