08/10 6ban class commit 2. commentapp

--- a/articleapp/templates/articleapp/detail.html
+++ b/articleapp/templates/articleapp/detail.html
@@ -43,6 +43,10 @@
                 <div class="comment_box">
                 <div>
                     <div>
+                        <span>
+                            <img src="{{ comment.writer.profile.image.url }}" alt=""
+                                style="border-radius: 4rem;">
+                        </span>
                     <span style="font-size:1.4rem;
                                 margin-right: 1.1rem"
                           class="NNS_B">
