08/10 6ban class commit 4. commentapp

--- a/articleapp/templates/articleapp/detail.html
+++ b/articleapp/templates/articleapp/detail.html
@@ -45,13 +45,7 @@
                     <div>
                         <span>
                             <img src="{{ comment.writer.profile.image.url }}" alt=""
-                                style="
-                                height: 2rem;
-                                width: 2rem;
-                                border-radius: 20rem;
-                                object-fit: cover;
-                                margin: 0.5rem;
-                                border: solid slategrey">
+                                class="comment_image">
                         </span>
                     <span style="font-size:1.4rem;
                                 margin-right: 1.1rem"
