--- a/static/base.css
+++ b/static/base.css
@@ -62,3 +62,12 @@
     border-radius: 1rem;
     margin: 1rem;
 }
+
+.comment_image {
+    height: 2rem;
+    width: 2rem;
+    border-radius: 20rem;
+    object-fit: cover;
+    margin: 0.5rem;
+    border: solid slategrey;
+}
