--- a/articleapp/templates/articleapp/list.html
+++ b/articleapp/templates/articleapp/list.html
@@ -4,14 +4,19 @@
 {% block content %}
 
     <style>
+        .container {
+            padding: 0;
+            margin: 0 auto;
+        }
         .container div {
-          width: 280px;
+          width: 45%;
+            max-width: 200px;
           display: flex;
           justify-content: center;
           align-items: center;
           border-radius: 1rem;
           flex-direction: column;
-            box-shadow: 0 0 5rem grey;
+            box-shadow: 0 0 1rem grey;
 
         }
 
