--- a/projectapp/templates/projectapp/list.html
+++ b/projectapp/templates/projectapp/list.html
@@ -9,20 +9,21 @@
             margin: 0 auto;
         }
         .container div {
-          width: 45%;
-            max-width: 200px;
           display: flex;
           justify-content: center;
           align-items: center;
           border-radius: 1rem;
           flex-direction: column;
-            box-shadow: 0 0 1rem grey;
+
 
         }
 
         .container img {
-            width: 100%;
+            width: 7rem;
+            height: 7rem;
+            object-fit: cover;
             border-radius: 1rem;
+            box-shadow: 0 0 1rem grey;
         }
 
     </style>
@@ -33,7 +34,7 @@
               <a href="{% url 'projectapp:detail' pk=project.pk %}">
                   <img src="{{ project.image.url }}" alt="">
               </a>
-          <span class="NNS_B m-2">{{ project.name }}</span>
+          <span class="NNS_B m-2">{{ project.name | truncatechars:7 }}</span>
           </div>
 
       {% endfor %}
