--- a/accountapp/templates/accountapp/detail.html
+++ b/accountapp/templates/accountapp/detail.html
@@ -40,7 +40,10 @@
             </a>
         </div>
         {% endif %}
+    </div>
 
+    <div>
+        {% include 'snippets/list_fragment.html' with article_list=object_list %}
     </div>
 
 
