08/23 6ban class commit 3. subscriptions

--- a/projectapp/templates/projectapp/list.html
+++ b/projectapp/templates/projectapp/list.html
@@ -44,7 +44,7 @@
 
     {% include 'snippets/pagination.html' %}
 
-    <div class="text-center my-5"></div>
+    <div class="text-center my-5">
         <a href="{% url 'projectapp:create' %}"
         class="btn btn-outline-dark rounded-pill px-5">
             Create Project
