--- a/templates/header.html
+++ b/templates/header.html
@@ -13,6 +13,13 @@
                 Projects
             </a>
         </span>
+        {% if user.is_authenticated %}
+        <span>
+            <a href="{% url 'subscription:list' %}">
+                Subscription
+            </a>
+        </span>
+        {% endif %}
 
         {% if not user.is_authenticated %}
         <span>
