--- a/templates/header.html
+++ b/templates/header.html
@@ -1,20 +1,24 @@
 <div style="text-align: center">
     <div class="shadow_header_logo">
-        <h1>WhaleBro</h1>
+        <h1>
+            <a href="{% url 'home' %}">
+                WhaleBro
+            </a>
+        </h1>
     </div>
     <div class="pragmatic_header_button">
-        <span>
+        <span class="mx-2">
             <a href="{% url 'articleapp:list' %}">
                 Articles
             </a>
         </span>
-        <span>
+        <span class="mx-2">
             <a href="{% url 'projectapp:list' %}">
                 Projects
             </a>
         </span>
         {% if user.is_authenticated %}
-        <span>
+        <span class="mx-2">
             <a href="{% url 'subscription:list' %}">
                 Subscription
             </a>
@@ -22,17 +26,17 @@
         {% endif %}
 
         {% if not user.is_authenticated %}
-        <span>
+        <span class="mx-2">
             <a href="{% url 'accountapp:login' %}">Login</a>
         </span>
-        <span>
+        <span class="mx-2">
             <a href="{% url 'accountapp:create' %}">Sign Up</a>
         </span>
         {% else %}
-        <span>
+        <span class="mx-2">
         <a href="{% url 'accountapp:detail' pk=user.pk %}">Mypage</a>
         </span>
-        <span>
+        <span class="mx-2">
             <a href="{% url 'accountapp:logout' %}">Logout</a>
         </span>
 
